testsuite/tests/properties/can_reach/invalid/common.lkt
from lexer_example import foo_lexer
from test import FooNode

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example(@Example)
}

class Example: FooNode implements TokenNode {
}
